--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -3,7 +3,96 @@
     min-height: 100vh;
   }
 .bg-image {
-    background-image: url('/assets/loginbg.jpg');
+    background-image: url('/assets/fakedashboard.png');
     background-size: cover;
-    background-position: center center;
+    background-position: center top;
+}
+
+.watermark {
+  position: absolute;
+  top: 34%;
+  left: 14%;
+  color: rgb(255 0 0 / 10%);
+  font-size: 10vw;
+  pointer-events: none;
+  transform: rotate(330deg);
+}
+
+.my-status-bar{
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  margin-left: 11.5%;
+  margin-right: 12%;
+}
+
+div.connecting-indicator {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  
+  background-color: #ccbf0f;
+  border-radius: 50%;
+  
+  position: relative;
+  align-self: center;
+  text-align: end;  
+}
+span.yellow-blink {
+  display: block;
+  width: 15px;
+  height: 15px;
+  
+  background-color: #ccbf0f;
+  opacity: 0.7;
+  border-radius: 50%;
+  
+  animation: blink 1s linear infinite;
+}
+
+
+div.online-indicator {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  
+  background-color: #0fcc45;
+  border-radius: 50%;
+  
+  position: relative;
+  align-self: center;
+  text-align: end;  
+}
+span.green-blink {
+  display: block;
+  width: 15px;
+  height: 15px;
+  
+  background-color: #0fcc45;
+  opacity: 0.7;
+  border-radius: 50%;
+  
+  animation: blink 1s linear infinite;
+}
+
+@keyframes blink {
+  100% { transform: scale(2, 2); 
+          opacity: 0;
+        }
+}
+
+div.offline-indicator {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  
+  background-color: #cc0f0f;
+  border-radius: 50%;
+  
+  position: relative;
+  align-self: center;
+  text-align: end;
 }
